🚀 Major Update: Full-width design, Yandex Maps, pagination
- Added Yandex Maps integration with markers
- Implemented server-side pagination (20 items/page)
- Full-width responsive design for MacBook 13" (1680×807)
- Modern Avito-style filters with chips
- Skeleton loading cards and animations
- Fixed blocked account authentication issue
- Enhanced UI/UX with Inter font and CSS variables
- Code optimization and modularization
- Updated branding to TutEstate

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "commercial-rental-service",
+  "name": "tutestate",
   "version": "1.0.0",
-  "description": "Веб-сервис объявлений для сдачи торговых помещений",
+  "description": "TutEstate - современный сервис коммерческой недвижимости",
   "main": "server/index.js",
   "scripts": {
     "dev": "concurrently \"npm run server\" \"npm run client\"",
@@ -11,8 +11,8 @@
     "start": "cd server && npm start",
     "install-all": "npm install && cd client && npm install && cd ../server && npm install"
   },
-  "keywords": ["rental", "commercial", "real-estate", "listings"],
-  "author": "",
+  "keywords": ["tutestate", "rental", "commercial", "real-estate", "listings", "недвижимость"],
+  "author": "TutEstate Team",
   "license": "MIT",
   "devDependencies": {
     "concurrently": "^8.2.2"
